Archive2/e8/a9e806fb9e471d/output
main.cpp:1:1: error: 'unordered_set' does not name a type
 unordered_set<uint64_t> getValues(unordered_set<uint64_t> contents, char buffer[102400])
 ^
